# gempa-notif-rs

./: .env.example  .gitignore  Cargo.toml  README.md
src/: main.rs  push.rs
